# DocRED-eval

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/docred_eval/: project.py  schema.py  utils.py
