[project]
name = "docred-eval"
version = "0.1.0"
description = "Evaluation of Gemini or Other LLMs on DocRED"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.10.4", "pydantic-ai-slim>=0.0.15", "pyyaml>=6.0.2"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff.lint]
ignore = ["F403", "F405"]
